Wed Mar 04 14:59:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/imgseek.py: Add (commented out) debugging prints.

Tue Mar 03 17:10:16 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py,
	  xappy/indexerconnection.py,xappy/searchconnection.py,
	  xappy/unittests/imgseek.py: Add an alternate, approximate but
	  much faster, method of doing the image similarity searches.
	* perftest/imgidx.py,perftest/imgsearch.py: Add some simple
	  performance tests for image searches.

Tue Mar 03 15:48:30 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* docs/image.rst: Documentation for the imgseek feature.

Mon Mar 02 13:48:01 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update branchpoints, and remove
	  valuemapsource branch which has been merged to trunk.

Fri Feb 27 14:23:26 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/_checkxapian.py,xappy/fieldactions.py,
	  xappy/searchconnection.py,xappy/unittests/imgseek.py: Add new
	  IMGSEEK field action, and corresponding query_image_similarity()
	  method.  Also add test case.  All requires a new set of xapian
	  pacakges, which are not yet available other than from SVN - this
	  feature is still under heavy development.

Fri Feb 27 13:05:03 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/testdata/sampleimages/candle.jpg,
	  xappy/unittests/testdata/sampleimages/cat.jpg,
	  xappy/unittests/testdata/sampleimages/looroll.jpg: Add some
	  sample data for testing image search.

Fri Feb 20 10:39:36 GMT 2009  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,xappy/unittests/calc_hash.py: Add
	  calc_hash() method to ProcessedDocument, returning a hash to use
	  to avoid reindexing documents which have not changed.  Patch from
	  Pablo.

Fri Feb 20 10:21:03 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
